tests/flow/typeapp_call/array.js
var arr = new Array<string>(10); // TODO: also support empty args
arr[0] = 0; // error: number ~> string
